Corrigido bug de não copilação do widgetset. Duas causas: a) bug no plugin do vaadin, na propriedade jvmArgs; b) vaadin-charts estava impedindo a compilação (provavelmente falta de licença de uso)