@@ -1,8 +1,7 @@
-import fi.jasoft.plugin.Util
-
 plugins {
   id "fi.jasoft.plugin.vaadin" version "0.9.7"
 }
+
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'eclipse-wtp'
@@ -43,11 +42,9 @@ vaadin {
     }
 }
 
-vaadin.gwt.jvmArgs = ['-Xmx1024m', '-Xms256m', '-XX:MaxPermSize=512m']
-vaadin.gwt.strict=false 
+vaadin.gwt.strict=true
 vaadin.plugin.logToConsole=true
-vaadin.gwt.logLevel = 'DEBUG'
- 
+
 tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
 }
@@ -58,10 +55,6 @@ task explodedWar(type: Copy) {
 
     with war
 
-}
-
-task hello << {
-    Util.getClientCompilerClassPath(project).each {println it}
 }
 
 
@@ -76,6 +69,17 @@ dependencies {
 
     compile ('org.slf4j:log4j-over-slf4j:1.7.10')
 
+    compile('javax.validation:validation-api:1.0.0.GA') {
+        artifact {
+            name = 'validation-api'
+            type = 'jar'
+        }
+        artifact {
+            name = 'validation-api'
+            type = 'jar'
+            classifier = 'sources'
+        }
+    }
 
     compile('org.vaadin.addon:confirmdialog:2.1.2'){
      		//excluding a particular transitive dependency:
@@ -113,7 +117,9 @@ dependencies {
    			exclude module: 'vaadin-themes' //by artifact name
 		}
 
-		 compile 'com.vaadin.addon:vaadin-charts:2.0.0'
+        //compile 'com.vaadin.addon:vaadin-charts:2.0.0'
+
+        compile 'com.google.code.gson:gson:2.2'
 
          //compile 'org.vaadin.addons:maskedtextfield:0.1.1'
 
@@ -148,7 +154,7 @@ dependencies {
 		compile 'org.hibernate:hibernate-core:4.3.8.Final'
 		compile 'org.hibernate:hibernate-c3p0:4.3.8.Final'
 		compile 'org.hibernate:hibernate-entitymanager:4.3.8.Final'
-		compile 'org.hibernate:hibernate-validator:5.1.3.Final'
+		compile 'org.hibernate:hibernate-validator:4.3.2.Final'
 		
 		compile 'org.hibernate:hibernate-search:5.0.1.Final'
 		compile 'org.hibernate:hibernate-search-analyzers:5.0.0.Alpha1'//'org.hibernate:hibernate-search-analyzers:4.5.3.Final'
